@@ -8,7 +8,7 @@ gwt.sdk = /Users/juha/gwt/gwt-2.4.0
 #  - Minor version for compatible features
 #  - Last version for bug fixes
 #
-version = 2.14.0_SNAPSHOT-2013-07-23
+version = 2.14.0_SNAPSHOT-2013-08-05
 
 # Build date (use YYYY-MM-DD format)
 build.date = 2013-06-14
