@@ -24,6 +24,8 @@ Designer 2.14.0 (2013-XX-XX Markab)
      default values" button (MODELER-453, Eric Bariaux)
    - Add data field to 1-wire protocol (MODELER-435, Marcus
      Redeker)
+   - Add 'line ending' configuration to UDP protocol
+     (MODELER-513, Simon Vincent)
 
 
  Fixes:
